--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.2.3",
     "ionic-angular": "^3.9.10",
     "rxjs": "~7.5.0",
+    "toastify-js": "^1.12.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -36,6 +37,7 @@
     "@angular/cli": "~15.0.5",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/toastify-js": "^1.11.1",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
