--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@fortawesome/angular-fontawesome": "^0.12.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "angular2-notifications": "^12.0.0",
     "bootstrap": "^5.2.3",
     "ionic-angular": "^3.9.10",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.7.2",
     "toastify-js": "^1.12.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
